--- a/Presentation/Nop.Web/Themes/MarsITinc/Views/Install/Index.cshtml
+++ b/Presentation/Nop.Web/Themes/MarsITinc/Views/Install/Index.cshtml
@@ -60,6 +60,7 @@
                     }
 
                     $(document).ready(function () {
+                        debugger;
                         $('#installation-form').submit(function () {
                             if ($('#installation-form').valid()) {
                                 $("html, body").animate({ scrollTop: 0 }, 400);
