--- a/Presentation/Nop.Web/Themes/MarsITinc/Views/Home/Index.cshtml
+++ b/Presentation/Nop.Web/Themes/MarsITinc/Views/Home/Index.cshtml
@@ -7,15 +7,18 @@
 <div class="page home-page">
     <div class="page-body">
         @await Component.InvokeAsync("Widget", new { widgetZone = PublicWidgetZones.HomepageTop })
+        @await Component.InvokeAsync("TopicBlock", new { systemName = "HomepageText" })
         @await Component.InvokeAsync("Widget", new { widgetZone = PublicWidgetZones.HomepageBeforeCategories })
         @await Component.InvokeAsync("HomepageCategories")
-        @await Component.InvokeAsync("TopicBlock", new { systemName = "HomepageSecondBanner" })
-        @await Component.InvokeAsync("TopicBlock", new { systemName = "HomepageCategories" })
+        @await Component.InvokeAsync("TopicBlock", new { systemName = "HomePageBottomStatic" })
+        @*@await Component.InvokeAsync("TopicBlock", new { systemName = "footerLinks" })*@
+        @*@await Component.InvokeAsync("TopicBlock", new { systemName = "HomepageSecondBanner" })*@
+        @*@await Component.InvokeAsync("TopicBlock", new { systemName = "HomepageCategories" })
         @await Component.InvokeAsync("TopicBlock", new { systemName = "HomepageBottomBanner" })
         @await Component.InvokeAsync("TopicBlock", new { systemName = "HomepageBottomInfo" })
-       @* @await Component.InvokeAsync("Widget", new { widgetZone = PublicWidgetZones.HomepageBeforeProducts })
-        @await Component.InvokeAsync("HomepageProducts")
-        @await Component.InvokeAsync("Widget", new { widgetZone = PublicWidgetZones.HomepageBeforeBestSellers })
+        @await Component.InvokeAsync("Widget", new { widgetZone = PublicWidgetZones.HomepageBeforeProducts })
+        @await Component.InvokeAsync("HomepageProducts")*@
+        @*@await Component.InvokeAsync("Widget", new { widgetZone = PublicWidgetZones.HomepageBeforeBestSellers })
         @await Component.InvokeAsync("HomepageBestSellers")
         @await Component.InvokeAsync("Widget", new { widgetZone = PublicWidgetZones.HomepageBeforeNews })
         @await Component.InvokeAsync("HomepageNews")
