--- a/Presentation/Nop.Web/Themes/MarsITinc/Views/Shared/_Root.Head.cshtml
+++ b/Presentation/Nop.Web/Themes/MarsITinc/Views/Shared/_Root.Head.cshtml
@@ -14,11 +14,19 @@
 @inject StoreInformationSettings storeInformationSettings
 @inject Nop.Services.Localization.ILanguageService languageService
 @{
-    Html.AppendScriptParts(ResourceLocation.Footer, "~/Themes/MarsITinc/Content/scripts/bootstrap.bundle.min.js");
-    Html.AppendScriptParts(ResourceLocation.Footer, "~/Themes/MarsITinc/Content/scripts/tether.min.js");
+
     Html.AppendScriptParts(ResourceLocation.Footer, "~/js/public.countryselect.js");
     Html.AppendScriptParts(ResourceLocation.Footer, "~/js/public.ajaxcart.js");
     Html.AppendScriptParts(ResourceLocation.Footer, "~/js/public.common.js");
+    Html.AppendScriptParts(ResourceLocation.Footer, "~/Themes/MarsITinc/Content/scripts/bootstrap.bundle.min.js");
+    Html.AppendScriptParts(ResourceLocation.Footer, "~/Themes/MarsITinc/Content/scripts/tether.min.js");
+
+    //Html.AppendScriptParts(ResourceLocation.Footer, "~/Themes/MarsITinc/Content/scripts/bootstrap.bundle.min.js");
+    //Html.AppendScriptParts(ResourceLocation.Footer, "~/Themes/MarsITinc/Content/scripts/tether.min.js");
+    //Html.AppendScriptParts(ResourceLocation.Footer, "~/js/public.countryselect.js");
+    //Html.AppendScriptParts(ResourceLocation.Footer, "~/js/public.ajaxcart.js");
+    //Html.AppendScriptParts(ResourceLocation.Footer, "~/js/public.common.js");
+
     //when jQuery migrate script logging is active you will see the log in the browser console
     if (commonSettings.JqueryMigrateScriptLoggingActive)
     {
@@ -28,6 +36,8 @@
     {
         Html.AppendScriptParts(ResourceLocation.Footer, "~/lib/jquery-migrate/jquery-migrate-3.1.0.min.js");
     }
+
+
     Html.AppendScriptParts(ResourceLocation.Footer, "~/lib/jquery-ui/jquery-ui-1.12.1.custom/jquery-ui.min.js");
     Html.AppendScriptParts(ResourceLocation.Footer, "~/lib/jquery-validate/jquery.validate.unobtrusive-v3.2.11/jquery.validate.unobtrusive.min.js");
     Html.AppendScriptParts(ResourceLocation.Footer, "~/lib/jquery-validate/jquery.validate-v1.19.1/jquery.validate.min.js");
